--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Jinja2==2.10.3
 MarkupSafe==1.1.1
 marshmallow==3.2.1
 marshmallow-sqlalchemy==0.19.0
+-e git://github.com/apanaee/pytube.git@6adb52c97425d17bc84c5ddae55651e3807a73e9#egg=pytube
 six==1.12.0
 SQLAlchemy==1.3.10
 Werkzeug==0.16.0
